feat 배포로 인한 디렉토리 및 html파일 이름 변경
1.배포를 위해 src에서 css, svg, html파일 프로젝트로 디렉토리 변경
2.배포를 위해 sportsStyle에서 index.html로 리팩토링

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>스포츠 코디</h1>
     <h2>내 사진으로 보는 인공지능 코디 추천</h2>
     <h3>내 얼굴과 어울리는 축구 유니폼은?</h3>
-    <p>ref: Jocoding / made by 송재훈</p>
+    <p>ref: Jocoding / made by SJH</p>
 
     <section class="gender-header">
         <h3>성별을 선택하세요</h3>
