feat naver 서치 어드바이저 파일 추가 1.네이버 서치 어드바이저 인증을 위한 meta data를 index.html에 추가 2. 네이버 서치 어드바이저 인증을 위한 파일 추가

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="naver-site-verification" content="d1f3f1c035f6a6a2ffb9fb126270e747312f23bd" />
     <title>스포츠코디</title>
     <link href="style.css" rel="stylesheet"/>
     <link href="nomalrize.css" rel="stylesheet">
