--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <title>스포츠코디</title>
     <link href="style.css" rel="stylesheet"/>
     <link href="nomalrize.css" rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6369882343971429"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <header class="cont_header">
@@ -29,7 +31,11 @@
     <h2>내 사진으로 보는 인공지능 코디 추천</h2>
     <h3>내 얼굴과 어울리는 축구 유니폼은?</h3>
     <p>ref: Jocoding / made by SJH</p>
-
+    <ins class="kakao_ad_area" style="display:none;"
+         data-ad-unit = "DAN-Nlc3QGIYWmGAAUZb"
+         data-ad-width = "728"
+         data-ad-height = "90"></ins>
+    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <section class="gender-header">
         <h3>성별을 선택하세요</h3>
         <div class="gender-box">
